<resources>
    <string name="app_name">360taxi Driver</string>
    <string name="title_activity_dash_board">DashBoard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="google_maps_web_services_key" templateMergeStrategy="preserve">AIzaSyAaX0T9Gp8dNWALPEKdoOYkLkplla9eOxI</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>


    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>


    <string name="action_settings">Settings</string>
    <string-array name="data_navdrawer">
        <item>Start Shift</item>
        <item>Job View</item>
        <item>Shift History</item>
        <item>Settings</item>
        <item>Sign Out</item>
        <item>Start Shift</item>
        <item>Job View</item>
        <item>Shift History</item>
        <item>Settings</item>
        <item>Sign Out</item>
        <item>Start Shift</item>
        <item>Job View</item>
        <item>Shift History</item>
        <item>Settings</item>
        <item>Sign Out</item>
        <item>Start Shift</item>
        <item>Job View</item>
        <item>Shift History</item>
        <item>Settings</item>
        <item>Sign Out</item>
    </string-array>

    <string-array name="data_spinner_addjob_bookingtype">
        <item>Full Vehicle</item>
        <item>Shared Vehicle</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps_job_location">Map</string>
    <string name="title_activity_pick_address_map">Map</string>
    <string name="title_activity_drop_address_map">Map</string>
    <string name="title_activity_testing_map">Map</string>

    <string name="passengerid">Passenger ID</string>
    <string name="ChatRoom">https://dispatch.360taxi.co.nz/ChatRoom.aspx?</string>
    s
    <string name="FnCompanyAllZones">https://360taxi.co.nz/webservices/api/DriverApp/FnCompanyAllZones</string>
    <string name="ChargeCustomer">https://360taxi.co.nz/webservices/api/DriverApp/ChargeCustomer</string>
    <string name="FnTarriffDetails">https://360taxi.co.nz/webservices/api/DriverApp/FnTarriffDetails</string>


    <string name="FnTextSending">https://360taxi.co.nz/webservices/api/DriverApp/fnTextSending</string>
    <string name="FnDriverArrivedText">https://360taxi.co.nz/webservices/api/DriverApp/FnDriverArrivedText</string>
    <string name="FnTotalFareText">https://360taxi.co.nz/webservices/api/DriverApp/FnTotalFareText</string>

    <string name="title_activity_shifts_history">ShiftsHistory</string>
    <string name="title_activity_add_extra_money">add_extra_money</string>
    <string name="title_activity_taximetter">TaximetterActivity</string>
    <string name="title_activity_fixed_price">FixedPrice</string>


</resources>